<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.cleanarchitecture.app.login.presentation.viewmodels.DefaultLoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
       >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_marginTop="64dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_dawaai_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="65dp"
            android:text="@string/rider"
            android:textColor="@color/dawaaiBlue"
            android:textSize="32sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="none"
                error_message="@{viewModel.userNameError}"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextUsername"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:background="@drawable/input_edit_text_rounded"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="16dp"
                    android:hint="@string/user_name"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
                    android:inputType="textFilter"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:text="@{viewModel.userName}"
                    set_text_watcher="@{viewModel.userNameTextWatcher}"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:paddingTop="12dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                error_message="@{viewModel.passwordError}"
                app:passwordToggleEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:background="@drawable/input_edit_text_rounded"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="16dp"
                    android:hint="@string/password"
                    android:text="@{viewModel.password}"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    set_text_watcher="@{viewModel.passwordTextWatcher}"
                    android:imeOptions="actionDone"
                    android:paddingTop="12dp" />
            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>

        <Button
            android:id="@+id/buttonLogin"
            style="@style/DefaultButtonStyle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="64dp"
            android:text="@string/login"
            android:onClick="@{()->viewModel.login(textInputEditTextUsername.getText().toString(), textInputEditTextPassword.getText().toString())}"
            set_visibility="@{!viewModel.loader}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            set_visibility="@{viewModel.loader}"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>